<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Other App</string>

    <string name="apiKey">AIzaSyD-2OEfkhb2ppdCvhZ8X9KZM-8G6NiQxJs</string> <!--this is google place api. Do not change-->

    <string name="facebook_app_id">589846928277704</string> <!--this is facebook login key -->
    <string name="fb_login_protocol_scheme">fb589846928277704</string> <!--this is facebook login key -->

    <!-- Google test credentials -->
    <string name="google_oauth_client_id">437506737850-ag350bhpqp5b65rma3lgck4k9gpjorgv.apps.googleusercontent.com</string>
    <string name="google_oauth_client_secret">glo5azMJ6eibIHBufv1n9yZK</string>

    <string name="error_found">Error</string>
    <string name="network_error">Network error</string>
    <string name="plz_wait">Please wait</string>

    <string name="back_online">Back online</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>

    <!-- Main Activity -->
    <string name="title">Title</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>

    <!-- Dialog ask success -->
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="empty_email">Empty Email</string>
    <string name="empty_password">Empty Password</string>

    <string name="hello">Hello</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="login_key">Login with Key</string>
    <string name="login_token">Login with Token</string>
    <string name="payment">Payment</string>
    <string name="back">Back</string>
    <string name="enter_username">Enter User Name</string>
    <string name="register_successful">Register Successfully</string>
    <string name="login_successful">Login Successfully</string>
    <string name="birthdate">Birthdate : </string>
    <string name="full_name">Full Name : </string>
    <string name="email">Email : </string>
    <string name="phone_no">Phone Number : </string>
    <string name="please_enter_username">Please enter User name</string>
    <string name="please_enter_key">Please Enter Key</string>
    <string name="please_enter_token">Please Enter Token</string>
    <string name="enter_key">Enter Key</string>
    <string name="enter_token">Enter Token</string>
    <string name="payment_succss">Payment Successfully</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="website">Website</string>
    <string name="company">Company</string>
    <string name="position">Position</string>
    <string name="order_id">Order Id</string>
    <string name="amount">Amount</string>
    <string name="transaction_id">Transaction Id</string>
    <string name="success">Success</string>

</resources>
