<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.demo.mobile.app.ui.main.detail.DetailActivityVM" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:background="@color/white">

                <TextView
                    android:id="@+id/tvBack"
                    style="@style/TextView.14x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginVertical="@dimen/_15sdp"
                    android:onClick="@{(v)->vm.onClick(v)}"
                    android:text="@string/back"
                    android:textColor="@color/blue_dark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/tvHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/register_successful"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvBack"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/tvBirthdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/birthdate"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_14ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvHeading"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/tvFullName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/full_name"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_14ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvBirthdate"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/email"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_14ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvFullName"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/phone_no"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_14ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvEmail"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/address"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_14ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvPhone"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/tvGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/gender"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_14ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvAddress"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/tvWebsite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/website"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_14ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvGender"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/tvCompany"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/company"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_14ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvWebsite"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/tvPosition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/position"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_14ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvCompany"
                    tools:visibility="visible" />



                <TextView
                    android:id="@+id/tvOrderId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/order_id"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_14ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvPosition"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/tvAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/amount"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_14ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvOrderId"
                    tools:visibility="visible" />
                <TextView
                    android:id="@+id/tvTransactionId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/transaction_id"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_14ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvAmount"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/tvSuccess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/success"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_14ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTransactionId"
                    tools:visibility="visible" />

                <ImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:contentDescription="@string/app_name"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvPosition"
                    tools:visibility="visible" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>